[project]
name = "data-structures"
version = "1.0.0"
description = "Some data structures implementation"
authors = [
    { name = "Gabriel Carvalho", email = "gabrielcarvalho@gcarvalho.com.br" },
]
license = { file = "LICENSE" }
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "UP", "D", "SIM", "T20", "ANN", "PTH", "RET", "ERA"]
ignore = ["T201", "COM812", "ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

